--- a/sass/web.site/modules/teaser/_teaser-large.sass
+++ b/sass/web.site/modules/teaser/_teaser-large.sass
@@ -1,5 +1,7 @@
 .teaser-large
 	@extend %teaser
+	&__series-label
+		@extend %teaser-series-label
 	&__heading
 		@extend %teaser-heading
 		margin-bottom: remify(14px)
