--- a/sass/web.site/modules/teaser/_teaser.sass
+++ b/sass/web.site/modules/teaser/_teaser.sass
@@ -42,6 +42,15 @@
 		display: table-cell
 		vertical-align: top
 
+%teaser-series-label
+	color: $zon_grey
+	font-size: remify(12px)
+	letter-spacing: $zon-letter-spacing-l
+	margin: 0 0 remify(8px) 0
+	text-transform: uppercase
+	+respond-min($break-desktop-min)
+		font-size: remify(14px)
+
 %teaser-heading
 	font-size: 1em
 	margin: 0 0 $tiny 0
