--- a/sass/web.site/modules/teaser/_teaser-small.sass
+++ b/sass/web.site/modules/teaser/_teaser-small.sass
@@ -7,6 +7,8 @@
 		@extend %teaser-media-item
 	&__container
 		@extend %teaser-small-container
+	&__series-label
+		@extend %teaser-series-label
 	&__heading
 		@extend %teaser-heading
 	&__combined-link
