--- a/sass/web.site/modules/teaser/_teaser-column.sass
+++ b/sass/web.site/modules/teaser/_teaser-column.sass
@@ -49,8 +49,9 @@ $teaser-column-mobile-image-size: 80px
 		color: $zon_grey
 		display: block
 		font-size: remify(12px)
+		font-weight: bold
 		letter-spacing: $zon-letter-spacing-l
-		margin: 0 0 remify(24px) 0
+		margin: 0 0 remify(16px) 0
 		text-transform: uppercase
 		+respond-min($break-desktop-min)
 			font-size: remify(14px)
