--- a/src/zeit/web/site/templates/inc/area/default.html
+++ b/src/zeit/web/site/templates/inc/area/default.html
@@ -8,6 +8,7 @@
         {% block before_module_include scoped %}{% endblock %}
         {% include
             [
+             "zeit.web.site:templates/inc/teaser/{0}_{1}_{2}.tpl".format(layout, journalistic_format, area.kind),
              "zeit.web.site:templates/inc/teaser/{0}_{1}.tpl".format(layout, journalistic_format),
              "zeit.web.site:templates/inc/teaser/{0}.tpl".format(journalistic_format),
              "zeit.web.site:templates/inc/module/{0}_{1}.html".format(layout, area.kind),
