ZON-1920: Add breakpoints to JS
From now on you can ask `window.ZMO.breakpoint.value` for the actual breakpoint, which would be `mobile`, `phablet`, `tablet` or `desktop`.

--- a/sass/web.magazin/screen.sass
+++ b/sass/web.magazin/screen.sass
@@ -20,6 +20,7 @@
 
 @import "layout/containers"
 
+@import "modules/breakpoints_2_js"
 @import "modules/tabs"
 @import "modules/nav"
 @import "modules/article"
