--- a/src/zeit/web/core/templates/inc/tracking/webtrekk.html
+++ b/src/zeit/web/core/templates/inc/tracking/webtrekk.html
@@ -12,10 +12,14 @@
 
     {% if view.pagination -%}
         {% set pagination = view.pagination.current ~'/'~ view.pagination.total -%}
+    {% else %}
+        {% set pagination = '1/1' -%}
     {% endif -%}
 
     {% set wt_kennung_part = 'redaktion.' + view.ressort | lower + '.' + view.sub_ressort | lower + '.' + serie + '.' + view.type | lower + '.online' %}
     {% set wt_kennung = "%s|%s%s" | format(wt_kennung_part, request.host, request.path) %}
+
+    {% set ivw_code = '%s%sbild-text' | format(view.ressort | lower + '/' if view.ressort, view.sub_ressort | lower + '/' if view.sub_ressort) %}
 
     var Z_WT_KENNUNG = "{{ wt_kennung }}";
 
@@ -40,13 +44,12 @@
             9: "{{ date }}" // {{ view.date_first_released | default("not published yet") }}
         };
 
-        {% if view.type == "article" -%}
         ivw_min_width = ivw_min_width || 767;
         wt.customParameter = {
             1: "{{ view.authors_list | lower | hide_none }}", // Autor
-            2: "{{ view.banner_channel | lower }}", // IVW-Code
+            2: "{{ ivw_code }}", // IVW-Code
             3: "{{ pagination }}", // Seite
-            4: "{{ view.ranked_tags_list | lower }}", // Schlagworte
+            4: "{{ view.ranked_tags_list | lower if view.ressort | lower != 'homepage'}}", // Schlagworte
             5: "{{ view.date_last_modified }}", // Last published
             6: "{{ view.text_length }}", // Textlänge
             7: "{{ view.news_source | hide_none | lower }}", // Quelle
@@ -55,9 +58,9 @@
             10: "{%- if view.context.advertising_enabled %}yes{% endif -%}", // Banner aktiv?
             11: "", // Fehler
             12: window.innerWidth >= ivw_min_width ? 'desktop.site' : 'mobile.site',
+            13: window.ZMO.breakpoint.value === 'desktop' ? 'stationaer' : window.ZMO.breakpoint.value,
             14: "neu"
         };
-        {% endif -%}
 
         wt.contentId = Z_WT_KENNUNG;
         wt.sendinfo();
@@ -79,9 +82,9 @@
                 view.banner_channel | lower,
                 date
             )
-        }}{% if view.type == 'article' -%}{{ "&cp1=%s&cp2=%s&cp3=%s&cp4=%s&cp5=%s&cp6=%s&cp7=%s&cp8=%s&cp9=%s&cp10=%s&cp11=%s&cp12=%s" | format(
+        }}{{ "&cp1=%s&cp2=%s&cp3=%s&cp4=%s&cp5=%s&cp6=%s&cp7=%s&cp8=%s&cp9=%s&cp10=%s&cp11=%s&cp12=%s&cp13=%s" | format(
             view.authors_list | lower | hide_none,
-            view.banner_channel | lower,
+            ivw_code,
             pagination,
             view.ranked_tags_list | lower,
             view.date_last_modified,
@@ -91,7 +94,8 @@
             view.banner_channel | lower,
             "",
             "",
-            "desktop.site"
-        ) }}{% endif -%}" />
+            "desktop.site",
+            "stationaer"
+        ) }}" />
     </div>
 </noscript>
