ZON-1829: Add default for scaled images

--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -23,6 +23,7 @@
 @import "modules/footer"
 @import "modules/parquet"
 @import "modules/page"
+@import "modules/scaled-image"
 
 // teaser
 @import "modules/teaser/teaser"
