ZON-1829: remify font size

--- a/sass/web.site/modules/teaser/_teaser-gallery.sass
+++ b/sass/web.site/modules/teaser/_teaser-gallery.sass
@@ -71,7 +71,7 @@
 	&__text
 		+respond-min($break-tablet-min)
 			margin: 0
-			font-size: 15px
+			font-size: remify(15px)
 			color: $zon_grey
 
 	&__figurewrapper
