--- a/src/zeit/web/site/templates/inc/comments/comment-form.html
+++ b/src/zeit/web/site/templates/inc/comments/comment-form.html
@@ -23,14 +23,34 @@
 			{% if request.session.user.picture %}
 			<img class="comment-form__avatar" alt="Avatarbild von {{ request.session.user.name }}" src="{{ request.session.user.picture }}">
 			{% endif %}
-			Angemeldet als
-			<a class="comment-form__username" href="{{ request.registry.settings.community_host }}/user">
-				{{ request.session.user.name }}
-			</a>
-			<a class="comment-form__cancel" href="{{ request.registry.settings.community_host }}/logout?destination={{ view.content_url | e }}">
-				Abmelden
-			</a>
+                        {% if request.session.user.name == "Kein Benutzername" %}
+                            Noch kein Benutzername  
+                             <a class="comment-form__username" href="{{ request.registry.settings.community_host }}/user">
+			    	(Profil bearbeiten)
+			    </a>
+
+                        {% else %}
+			    Angemeldet als
+			    <a class="comment-form__username" href="{{ request.registry.settings.community_host }}/user">
+			    	{{ request.session.user.name }}
+			    </a>
+                            {% endif %}
+                        {% if request.registry.settings.sso_activate %}
+			    <a class="comment-form__cancel" href="{{
+                                request.registry.settings.sso_url}}/abmelden?url={{ request.url| e }}">
+			    	Abmelden
+			    </a>
+                        {% else %}
+			    <a class="comment-form__cancel" href="{{ request.registry.settings.community_host }}/logout?destination={{ view.content_url | e }}">
+			    	Abmelden
+			    </a>
+                        {% endif %}
 		</div>
+                {% if request.registry.settings.sso_activate %}
+                    {% if request.session.user.name == "Kein Benutzername" %}
+			<input class="comment-form__text" placeholder="Ihr neuer Benutzername" type="text" name="user_name">
+                    {% endif %}
+                {% endif %}
 		<textarea class="comment-form__textarea js-required" name="comment" placeholder="{{ placeholder }}" maxlength="1500"></textarea>
 		<p class="comment-form__actions">
 			<input type="hidden" name="action" value="comment">
@@ -46,12 +66,23 @@
 		<p>
 			Bitte melden Sie sich an, um zu kommentieren.
 		</p>
-		<a class="button" href="{{ request.registry.settings.community_host }}/user/login?destination={{ view.content_url | e }}">
-			Anmelden
-		</a>
-		<a class="button" href="{{ request.registry.settings.community_host }}/user/register?destination={{ view.content_url | e }}">
+                {% if request.registry.settings.sso_activate %}
+		    <a class="button" href="{{
+                        request.registry.settings.sso_url }}/anmelden?url={{ view.content_url | e }}">
+		    	Anmelden
+		    </a>
+		    <a class="button" href="{{
+                        request.registry.settings.sso_url }}/registrieren?url={{ view.content_url | e }}">
 			Registrieren
-		</a>
+		    </a>
+                {% else %}
+		    <a class="button" href="{{ request.registry.settings.community_host }}/user/login?destination={{ view.content_url | e }}">
+		    	Anmelden
+		    </a>
+		    <a class="button" href="{{ request.registry.settings.community_host }}/user/register?destination={{ view.content_url | e }}">
+			Registrieren
+		    </a>
+                {% endif %}
 	</form>
 {%- endif %}
 </div>
@@ -64,12 +95,21 @@
 		<p>
 			Bitte melden Sie sich an, um diesen Kommentar zu melden.
 		</p>
-		<a class="button" href="{{ request.registry.settings.community_host }}/user/login?destination={{ view.content_url | e }}">
-			Anmelden
-		</a>
-		<a class="button" href="{{ request.registry.settings.community_host }}/user/register?destination={{ view.content_url | e }}">
-			Registrieren
-		</a>
+                {% if request.registry.settings.sso_activate %}
+		    <a class="button" href="{{ request.registry.settings.sso_url }}/anmelden?url={{ view.content_url | e }}">
+		        	Anmelden
+		    </a>
+		    <a class="button" href="{{ request.registry.settings.sso_url }}/registrieren?url={{ view.content_url | e }}">
+		        	Registrieren
+		    </a>
+                {% else %}
+		    <a class="button" href="{{ request.registry.settings.community_host }}/user/login?destination={{ view.content_url | e }}">
+		        	Anmelden
+		    </a>
+		    <a class="button" href="{{ request.registry.settings.community_host }}/user/register?destination={{ view.content_url | e }}">
+		        	Registrieren
+		    </a>
+                {% endif %}
 	</form>
 {%- endif %}
 </script>
