--- a/sass/web.site/modules/teaser/_teaser-column.sass
+++ b/sass/web.site/modules/teaser/_teaser-column.sass
@@ -4,7 +4,9 @@
 $color-column-background: $zon-warm-grey
 $teaser-column-mobile-image-size: 80px
 
-.teaser-column
+// /////////////////////////////////////////////////////////////////////////////
+
+%teaser-column
 	@extend %teaser
 	background: $color-column-background
 	margin: remify(40px) (-$page-padding) $vertical-space (-$page-padding)
@@ -13,21 +15,43 @@ $teaser-column-mobile-image-size: 80px
 		margin-left: 0
 		margin-right: 0
 		padding: $page-padding
+
+%teaser-column__media
+	overflow: hidden
+	position: absolute
+	bottom: 0
+	right: 0
+	width: $teaser-column-mobile-image-size
+	height: $teaser-column-mobile-image-size
+	margin: 0
+
+%teaser-column__media-item
+	@extend %teaser-media-item
+	+old-ie
+		background: $white
+		margin-left: 20px
+		margin-top: 30px
+		position: static
+
+%teaser-column--has-media__byline
+	padding-right: remify($teaser-column-mobile-image-size)
+	// min-height: $teaser-column-mobile-image-size - $page-padding - ownMarginBottom
+	min-height: 3.5rem
+
+
+// /////////////////////////////////////////////////////////////////////////////
+
+.teaser-column
+	@extend %teaser-column
 	+respond-min($break-desktop-min)
 		margin: $vertical-space 0 $vertical-space 0
-		min-height: remify(250px)
-		padding: $petite $petite $petite remify(250px+20px)
+		&--has-media,
+		:not('.teaser-column--in-minor')
+			min-height: remify(250px)
+			padding: $petite $petite $petite remify(250px+20px)
 	&__media
-		overflow: hidden
-		position: absolute
-		bottom: 0
-		right: 0
-		width: $teaser-column-mobile-image-size
-		height: $teaser-column-mobile-image-size
-		margin: 0
+		@extend %teaser-column__media
 		+respond-min($break-desktop-min)
-			overflow: hidden
-			position: absolute
 			top: 0
 			right: 60%
 			bottom: 0
@@ -35,26 +59,13 @@ $teaser-column-mobile-image-size: 80px
 			width: 40%
 			height: 100%
 	&__media-item
-		@extend %teaser-media-item
-		+old-ie
-			background: $white
-			margin-left: 20px
-			margin-top: 30px
-			position: static
+		@extend %teaser-column__media-item
 	&__heading
 		@extend %teaser-heading
 	&__combined-link
 		@extend %teaser-combined-link
-	&__series
-		color: $zon_grey
-		display: block
-		font-size: remify(12px)
-		font-weight: bold
-		letter-spacing: $zon-letter-spacing-l
-		margin: 0 0 remify(16px) 0
-		text-transform: uppercase
-		+respond-min($break-desktop-min)
-			font-size: remify(14px)
+	&__series-label
+		@extend %teaser-series-label
 	&__kicker
 		@extend %teaser-kicker
 	&__title
@@ -74,17 +85,11 @@ $teaser-column-mobile-image-size: 80px
 
 
 // if there is an image, make sure the byline wraps around it.
-.teaser-column--hasmedia
-	.teaser-column__container
-		padding-bottom: remify(44px)
-		+respond-min($break-desktop-min)
-			padding-bottom: 0
-	.teaser-column__byline,
-	.teaser-column__metadata
-		padding-right: remify(100px)
+.teaser-column--has-media
+	.teaser-column__byline
+		@extend %teaser-column--has-media__byline
 		+respond-min($break-desktop-min)
 			padding-right: 0
-
 
 // prevent next teaser from having border
 .teaser-column + .teaser // deprecated
