--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -37,6 +37,7 @@
 @import "modules/teaser/teaser-printbox"
 @import "modules/teaser/teaser-small"
 @import "modules/teaser/teaser-small-minor"
+@import "modules/teaser/teaser-small-column-minor"
 @import "modules/teaser/teaser-square"
 
 // journalistic format marker
