ZON-1811: Use explicit compass mixin syntax

--- a/sass/web.site/modules/_footer.sass
+++ b/sass/web.site/modules/_footer.sass
@@ -159,7 +159,7 @@ $footer_button_icon_width: em(10px)
 				+drop_icon()
 			&:hover
 				&:after
-					+rotate(180deg)
+					+transform(rotate(180deg))
 
 .footer-links
 	background-color: $zon-charcoal
