--- a/sass/web.site/modules/article/_article-interactions.sass
+++ b/sass/web.site/modules/article/_article-interactions.sass
@@ -58,7 +58,7 @@
 .sharing-menu--active > .sharing-menu__title
 	color: $zon_dark_grey
 	&:after
-		+rotate(180deg)
+		+transform(rotate(180deg))
 
 .sharing-menu--active > .sharing-menu__items,
 .no-js .sharing-menu__items // no-js fallback
