--- a/sass/web.site/modules/centerpage/_centerpage.sass
+++ b/sass/web.site/modules/centerpage/_centerpage.sass
@@ -17,19 +17,19 @@
 
 .cp-area
 	padding: 0 $cp-padding
-	float: left
 	width: 100%
 	&--parquet,
 	&--spektrum,
 	&--topic
 		padding: 0
 		position: relative
-	&--ranking
-		float: none
-		max-width: remify(660px)
-		margin-left: auto
-		margin-right: auto
 	+respond-min($break-areas)
+		float: left
+		&--ranking
+			float: none
+			max-width: remify(680px) // + 2 * $cp-padding
+			margin-left: auto
+			margin-right: auto
 		&--major
 			width: 66.66%
 		&--duo
