ZON-1811: Refactor search

--- a/sass/web.site/ie-navi.sass
+++ b/sass/web.site/ie-navi.sass
@@ -53,7 +53,7 @@
             position: absolute
             top: 5px
             left: 20px
-    .logo_bar__menue
+    .logo_bar__menu
         height: $zon-bar-height-phablet-px
 
 
