--- a/sass/web.site/modules/teaser/_teaser.sass
+++ b/sass/web.site/modules/teaser/_teaser.sass
@@ -9,7 +9,7 @@
 	padding: $vertical-space $page-padding
 	&:nth-of-type(1)
 		border-top: none
-	+respond-min($break-tablet-min)
+	+respond-min($break-areas)
 		border-bottom: none
 		border-top: none
 		margin: 0
