--- a/sass/web.site/modules/search/_search-form.sass
+++ b/sass/web.site/modules/search/_search-form.sass
@@ -1,164 +1,129 @@
 $focus-color: rgba(0, 136, 193, 0.55)
 $dropdown-width: remify(160px)
 
-%hidden-fieldset
-	border: none
-	margin: 0
-	padding: 0
-
-%dropdown-legend
-	background-color: $white
-	background-position: 94% 50%
-	border: 1px solid $zon_light_grey
-	border-radius: remify(4px)
-	color: $zon_grey
-	cursor: pointer
-	display: block
-	font-size: remify(12px)
-	height: remify(32px)
-	line-height: remify(32px)
-	padding: remify(0 15px)
-	width: $dropdown-width
-
-%dropdown-extend
-	background: $zon-warm-grey
-	border: 1px solid $zon_light_grey
-	border-top: none
-	max-height: 5000px // absurd high px value for get height anim working
-	overflow: hidden
-	+transition(all 0.50s ease-in-out)
-
 .search-form
-	background: $zon_lighter_grey
+	background: $zon-warm-grey
 	margin: remify(0 -20px)
 	padding: remify(25px 20px)
+	&__fieldset
+		+respond-min($break-tablet-min)
+			margin: 0 auto
+			max-width: 660px
 
 .search-text-input
-	background: $white
-	border: 1px solid $zon_light_grey
-	border-radius: remify(4px)
-	height: remify(48px)
 	+display-flex
-	+respond-min($break-tablet-min)
-		margin: 0 auto
-		width: 660px
-	&__label
-		@extend %off-screen
+	font-size: remify(14px)
 	&__input
-		background: transparent
-		border: none
-		font-size: remify(14px)
+		background-color: $white
+		border-color: $zon_light_grey
+		border-radius: remify(4px 0 0 4px)
+		border-style: solid
+		border-width: 1px 0 1px 1px
 		outline: none // readd in :focus for a11y
 		padding: remify(10px)
 		+flex-grow(1)
-		+transition(all 0.50s ease-in-out)
+		+transition(box-shadow .3s ease-in-out)
 		&:focus
+			background-color: $white
 			box-shadow: inset 0 0 10px $focus-color
 
 .search-submit
-	background: transparent
-	border: none
-	border-left: 1px solid $zon_light_grey
-	height: remify(46px)
+	background-color: $white
+	color: $zon_grey
+	border-radius: remify(0 4px 4px 0)
+	border: 1px solid $zon_light_grey
 	outline: none // readd in :focus for a11y
-	overflow: hidden
-	padding: 0
-	width: remify(46px)
-	+transition(all 0.50s ease-in-out)
+	padding: remify(10px 12px)
+	+transition(box-shadow .3s ease-in-out)
 	+respond-min($break-tablet-min)
-		width: remify(120px)
+		padding: remify(10px 20px)
 	&:focus
 		box-shadow: inset 0 0 10px $focus-color
 	&__icon
-		background-position: 50%
-		float: left
-		height: remify(46px)
-		width: remify(46px)
+		height: remify(18px)
+		width: remify(18px)
+		vertical-align: text-bottom
 	&__text
 		display: none
-		float: left
-		font-size: remify(14px)
-		height: remify(46px)
-		line-height: remify(46px)
 		text-transform: uppercase
 		+respond-min($break-tablet-min)
-			display: block
+			display: inline
+			padding-left: .5em
 
-.search-additional-queries
-	margin-top: remify(15px) // has topmargin to defend position on toggle effect
-	+respond-min($break-tablet-min)
-		margin: remify(15px) auto 0 auto
-		width: 660px
+.search-options
+	margin-top: remify(14px) // has topmargin to defend position on toggle effect
 	&__on
 		cursor: pointer
 		display: block
 		font-size: remify(14px)
 		max-height: 5000px // absurd high px value for get height anim working
 		overflow: hidden
-		+transition(max-height 0.50s ease-in-out)
-		&--hidden
-			max-height: 0
-		+respond-min($break-tablet-min)
-			display: none
+		+transition(max-height .5s ease-in-out)
 	&__container
-		max-height: 5000px // absurd high px value for get height anim working
 		overflow: hidden
-		+transition(max-height 0.50s ease-in-out)
-		.js &--hidden
+		+transition(max-height .5s ease-in-out)
+		.js &
 			max-height: 0
 			+respond-min($break-tablet-min)
-				max-height: 5000px // absurd high px value for get height anim working
+				max-height: none
 	&__off
 		display: none
 		.js &
-			background-position: 50%
 			cursor: pointer
 			display: block
 			float: left
-			height: remify(28px)
-			width: remify(28px)
+			height: remify(32px)
+			width: remify(32px)
 			+respond-min($break-tablet-min)
 				display: none
+	&__icon
+		width: remify(18px)
+		height: remify(18px)
+		margin: remify(7px 0)
 
-.search-timerange
-	@extend %hidden-fieldset
+	&--open
+		.search-options__on
+			max-height: 0
+			+respond-min($break-tablet-min)
+				display: none
+		.search-options__container
+			max-height: 5000px // absurd high px value for get height anim working
+
+.search-range
+	border: none
+	margin: 0
+	padding: 0
 	float: left
 	margin-right: remify(12px)
 	width: $dropdown-width
 	&__legend
-		@extend %dropdown-legend
+		background-color: $white
+		border: 1px solid $zon_light_grey
+		border-radius: remify(4px)
+		color: $zon_grey
+		cursor: pointer
+		display: block
+		font-size: remify(12px)
+		padding: remify(6px 16px)
+		width: 100%
+	&__icon
+		float: right
+		height: remify(6px)
+		margin-top: remify(6px)
+		width: remify(8px)
+		+transition(transform .3s)
 	&__extend
-		@extend %dropdown-extend
-		+transition(all 0.30s ease-in-out)
-		.js &--hidden
-			background: transparent
-			border: none
+		background: lighten($zon-warm-grey, 5%)
+		border-width: 0px 1px
+		border-style: solid
+		border-color: $zon_light_grey
+		box-shadow: inset 0 -1px 0 $zon_light_grey // fake border bottom
+		overflow: hidden
+		+transition(max-height .3s)
+		.js &
 			max-height: 0
-	&__label
-		font-size: remify(11px)
-		padding-left: 5px
-		vertical-align: middle
-	&__group
-		margin: remify(0 14px)
-		&:first-child
-			margin-top: remify(14px)
-		&:last-child
-			margin-bottom: remify(14px)
-
-.search-typerange
-	@extend %hidden-fieldset
-	float: left
-	margin-right: remify(12px)
-	width: $dropdown-width
-	&__legend
-		@extend %dropdown-legend
-	&__extend
-		@extend %dropdown-extend
-		+transition(all 0.30s ease-in-out)
-		.js &--hidden
-			background: transparent
-			border: none
-			max-height: 0
+			position: absolute
+			width: $dropdown-width
 	&__label
 		font-size: remify(11px)
 		padding-left: remify(5px)
@@ -169,3 +134,10 @@ $dropdown-width: remify(160px)
 			margin-top: remify(14px)
 		&:last-child
 			margin-bottom: remify(14px)
+	&--open
+		.search-range__legend
+			border-radius: remify(4px 4px 0 0)
+		.search-range__icon
+			+transform(rotate(180deg))
+		.search-range__extend
+			max-height: em(300px)
