--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -29,7 +29,6 @@
 @import "modules/teaser/teaser"
 @import "modules/teaser/teaser-beta"
 @import "modules/teaser/teaser-buzz"
-@import "modules/teaser/teaser-column"
 @import "modules/teaser/teaser-fullwidth"
 @import "modules/teaser/teaser-topic"
 @import "modules/teaser/teaser-large"
@@ -38,11 +37,17 @@
 @import "modules/teaser/teaser-printbox"
 @import "modules/teaser/teaser-small"
 @import "modules/teaser/teaser-small-minor"
-@import "modules/teaser/teaser-small-column-minor"
 @import "modules/teaser/teaser-square"
 
 // journalistic format marker
 @import "modules/teaser/blog-format"
+
+// journalistic format: column
+@import "modules/teaser/column-format"
+@import "modules/teaser/teaser-large-column"
+@import "modules/teaser/teaser-fullwidth-column"
+@import "modules/teaser/teaser-small-column"
+@import "modules/teaser/teaser-small-column-minor"
 
 // centerpage
 @import "modules/centerpage/centerpage"
