--- a/sass/web.site/modules/teaser/_teaser-small.sass
+++ b/sass/web.site/modules/teaser/_teaser-small.sass
@@ -1,7 +1,8 @@
 .teaser-small
 	@extend %teaser
 	&__media
-		@extend %teaser-column__media
+		@extend %teaser-media
+		@extend %teaser-small-media
 	&__media-item
 		@extend %teaser-media-item
 	&__container
