--- a/sass/web.site/modules/teaser/_teaser-small-column-minor.sass
+++ b/sass/web.site/modules/teaser/_teaser-small-column-minor.sass
@@ -1,5 +1,7 @@
 .teaser-small-column-minor
 	@extend %teaser-column
+	@extend %teaser-column--margin-for-not-fullwidth
+	%teaser-column--not-fullwidth
 	&__media
 		@extend %teaser-column__media
 	&__media-item
