--- a/sass/web.site/modules/teaser/_teaser-large-column.sass
+++ b/sass/web.site/modules/teaser/_teaser-large-column.sass
@@ -1,5 +1,7 @@
 .teaser-large-column
 	@extend %teaser-column
+	@extend %teaser-column--margin-for-not-fullwidth
+	%teaser-column--not-fullwidth
 	&__media
 		@extend %teaser-column__media
 	&__media-item
@@ -29,9 +31,9 @@
 
 .teaser-large-column--has-media
 	.teaser-large-column__byline
-		padding-right: remify($teaser-column-image-size)
-		// min-height: $teaser-column-image-size - $page-padding - ownMarginBottom = 7.5rem - 1.25rem - 0.25rem
-		min-height: 6rem
+		padding-right: remify($teaser-column-mobile-image-size)
+		// min-height: $teaser-column-mobile-image-size - $page-padding - ownMarginBottom = 5rem - 1.25rem - 0.25rem
+		min-height: 3.5rem
 
 +respond-min($break-phablet-min)
 	.teaser-large-column--has-media
