--- a/sass/web.site/modules/teaser/_teaser-small-column.sass
+++ b/sass/web.site/modules/teaser/_teaser-small-column.sass
@@ -1,5 +1,6 @@
 .teaser-small-column
 	@extend %teaser-column
+	@extend %teaser-column--margin-for-not-fullwidth
 	&__media
 		@extend %teaser-column__media
 	&__media-item
@@ -30,7 +31,7 @@
 .teaser-small-column--has-media
 	.teaser-small-column__byline
 		padding-right: remify($teaser-column-mobile-image-size)
-		// min-height: $teaser-column-mobile-image-size - $page-padding - ownMarginBottom
+		// min-height: $teaser-column-mobile-image-size - $page-padding - ownMarginBottom = 5rem - 1.25rem - 0.25rem
 		min-height: 3.5rem
 
 +respond-min($break-desktop-min)
