ZON-1822: style blog and series teaser for parquet

--- a/sass/web.site/modules/_parquet.sass
+++ b/sass/web.site/modules/_parquet.sass
@@ -141,6 +141,5 @@
 	display: table-cell
 	vertical-align: top
 	margin: 0
-	padding: 0
-	+respond-min($break-tablet-min)
-		padding: remify($petite--px) $page-padding 0 remify($petite--px)
+	padding: 0 $page-padding
+
