ZON-1822: teaser-column in parquet (WIP, not done)

--- a/sass/web.site/modules/teaser/_column-format.sass
+++ b/sass/web.site/modules/teaser/_column-format.sass
@@ -17,6 +17,10 @@ $teaser-column-image-size: 120px
 		margin-left: 0
 		margin-right: 0
 
+%teaser-column--in-parquet
+	background: none
+	padding: 0
+
 %teaser-column__media
 	@extend %teaser-media
 	overflow: hidden
