--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -45,9 +45,11 @@
 // journalistic format: column
 @import "modules/teaser/column-format"
 @import "modules/teaser/teaser-large-column"
+@import "modules/teaser/teaser-large-column-parquet"
 @import "modules/teaser/teaser-fullwidth-column"
 @import "modules/teaser/teaser-small-column"
 @import "modules/teaser/teaser-small-column-minor"
+@import "modules/teaser/teaser-small-column-parquet"
 
 // centerpage
 @import "modules/centerpage/centerpage"
