ZON-1822: polish polish polish

--- a/sass/web.site/modules/_parquet.sass
+++ b/sass/web.site/modules/_parquet.sass
@@ -1,4 +1,5 @@
 .parquet
+	// i think this selector is deprecated and its content should be removed
 	clear: both
 	display: block
 	margin: 0 (-$page-padding) // parquet has 'full width'
