--- a/sass/web.site/modules/teaser/_teaser-large.sass
+++ b/sass/web.site/modules/teaser/_teaser-large.sass
@@ -5,6 +5,8 @@
 	&__heading
 		@extend %teaser-heading
 		margin-bottom: remify(14px)
+		&--parquet
+			margin-bottom: remify(6px)
 	&__combined-link
 		@extend %teaser-combined-link
 	&__kicker
