--- a/sass/web.site/modules/search/_search-form.sass
+++ b/sass/web.site/modules/search/_search-form.sass
@@ -52,6 +52,7 @@ $dropdown-width: remify(160px)
 
 .search-options
 	margin-top: remify(14px)
+	color: $zon_grey
 	&__on
 		display: none
 		+transition(max-height .3s ease-in-out)
@@ -83,7 +84,7 @@ $dropdown-width: remify(160px)
 	&__icon
 		width: remify(18px)
 		height: remify(18px)
-		margin: remify(7px 0)
+		margin: remify(7px 6px)
 
 	&--open
 		.search-options__on
@@ -96,7 +97,7 @@ $dropdown-width: remify(160px)
 	margin: 0
 	padding: 0
 	float: left
-	margin-right: remify(12px)
+	margin-right: remify(10px)
 	width: $dropdown-width
 	&__legend
 		background-color: $white
@@ -120,6 +121,8 @@ $dropdown-width: remify(160px)
 		border-style: solid
 		border-color: $zon_light_grey
 		box-shadow: inset 0 -1px 0 $zon_light_grey // fake border bottom
+		font-size: remify(11px)
+		line-height: 2
 		overflow: hidden
 		+transition(max-height .3s)
 		.js &
@@ -127,15 +130,15 @@ $dropdown-width: remify(160px)
 			position: absolute
 			width: $dropdown-width
 	&__label
-		font-size: remify(11px)
-		padding-left: remify(5px)
-		vertical-align: middle
-	&__group
-		margin: remify(0 14px)
+		cursor: pointer
+		display: block
+		margin: remify(2px 14px)
 		&:first-child
 			margin-top: remify(14px)
 		&:last-child
 			margin-bottom: remify(14px)
+	&__input
+		margin-right: remify(6px)
 	&--open
 		.search-range__legend
 			border-radius: remify(4px 4px 0 0)
