--- a/src/zeit/web/site/templates/inc/module/search-form.html
+++ b/src/zeit/web/site/templates/inc/module/search-form.html
@@ -19,10 +19,10 @@
 					</legend>
 					<div class="search-range__extend">
 						{% for id, checked, label in module.mode_choice %}
-						<div class="search-range__group">
-							<input type="radio" name="mode" id="{{ id }}" value="{{ id }}"{% if checked %} checked{% endif %}/>
-							<label class="search-range__label" for="{{ id }}">{{ label }}</label>
-						</div>
+						<label class="search-range__label">
+							<input class="search-range__input" type="radio" name="mode" value="{{ id }}"{% if checked %} checked{% endif %}/>
+							{{ label }}
+						</label>
 						{% endfor %}
 					</div>
 				</fieldset>
@@ -33,10 +33,10 @@
 					</legend>
 					<div class="search-range__extend">
 						{% for id, checked, label in module.type_choice %}
-						<div class="search-range__group">
-							<input type="checkbox" name="type" id="{{ id }}" value="{{ id }}"{% if checked %} checked{% endif %}/>
-							<label class="search-range__label" for="{{ id }}">{{ label }}</label>
-						</div>
+						<label class="search-range__label">
+							<input class="search-range__input" type="checkbox" name="type" value="{{ id }}"{% if checked %} checked{% endif %}/>
+							{{ label }}
+						</label>
 						{% endfor %}
 					</div>
 				</fieldset>
