--- a/sass/web.site/modules/teaser/_teaser-small-column.sass
+++ b/sass/web.site/modules/teaser/_teaser-small-column.sass
@@ -1,24 +1,21 @@
 .teaser-small-column
 	@extend %teaser-column
-	@extend %teaser-column--margin-for-not-fullwidth
 	&__media
 		@extend %teaser-column__media
 	&__media-item
 		@extend %teaser-column__media-item
-	&__container
-		@extend %teaser-small-container
 	&__series-label
-		@extend %teaser-series-label
+		@extend .teaser-small__series-label
 	&__heading
-		@extend %teaser-heading
+		@extend .teaser-small__heading
 	&__combined-link
-		@extend %teaser-combined-link
+		@extend .teaser-small__combined-link
 	&__kicker
-		@extend %teaser-kicker
+		@extend .teaser-small__kicker
 	&__title
-		@extend %teaser-title
+		@extend .teaser-small__title
 	&__text
-		@extend %teaser-text
+		@extend .teaser-small__text
 	&__byline
 		@extend %teaser-column__byline
 	&__metadata
