--- a/sass/web.site/modules/teaser/_teaser-fullwidth-column.sass
+++ b/sass/web.site/modules/teaser/_teaser-fullwidth-column.sass
@@ -1,23 +1,22 @@
 .teaser-fullwidth-column
 	@extend %teaser-column
+	margin: remify(40px) (-$page-padding) $vertical-space (-$page-padding)
 	&__media
 		@extend %teaser-column__media
 	&__media-item
 		@extend %teaser-column__media-item
-	&__container
-		@extend %teaser-small-container
 	&__series-label
-		@extend %teaser-series-label
+		@extend .teaser-large__series-label
 	&__heading
-		@extend %teaser-heading
+		@extend .teaser-large__heading
 	&__combined-link
-		@extend %teaser-combined-link
+		@extend .teaser-large__combined-link
 	&__kicker
-		@extend %teaser-kicker
+		@extend .teaser-large__kicker
 	&__title
-		@extend %teaser-title
+		@extend .teaser-large__title
 	&__text
-		@extend %teaser-text
+		@extend .teaser-large__text
 	&__byline
 		@extend %teaser-column__byline
 	&__metadata
@@ -36,11 +35,11 @@
 +respond-min($break-phablet-min)
 	.teaser-fullwidth-column--has-media
 		.teaser-fullwidth-column__media
-			width: $teaser-column-image-size
-			height: $teaser-column-image-size
+			width: $teaser-column-image-width-fullwidth
+			height: $teaser-column-image-height-fullwidth
 		.teaser-fullwidth-column__byline
 			min-height: initial
 		.teaser-fullwidth-column__text,
 		.teaser-fullwidth-column__title
-			padding-right: remify($teaser-column-image-size)
+			padding-right: remify($teaser-column-image-width-fullwidth)
 
