--- a/sass/web.site/modules/teaser/_teaser-large-column.sass
+++ b/sass/web.site/modules/teaser/_teaser-large-column.sass
@@ -1,24 +1,21 @@
 .teaser-large-column
 	@extend %teaser-column
-	@extend %teaser-column--margin-for-not-fullwidth
 	&__media
 		@extend %teaser-column__media
 	&__media-item
 		@extend %teaser-column__media-item
-	&__container
-		@extend %teaser-small-container
 	&__series-label
-		@extend %teaser-series-label
+		@extend .teaser-large__series-label
 	&__heading
-		@extend %teaser-heading
+		@extend .teaser-large__heading
 	&__combined-link
-		@extend %teaser-combined-link
+		@extend .teaser-large__combined-link
 	&__kicker
-		@extend %teaser-kicker
+		@extend .teaser-large__kicker
 	&__title
-		@extend %teaser-title
+		@extend .teaser-large__title
 	&__text
-		@extend %teaser-text
+		@extend .teaser-large__text
 	&__byline
 		@extend %teaser-column__byline
 	&__metadata
@@ -37,10 +34,10 @@
 +respond-min($break-phablet-min)
 	.teaser-large-column--has-media
 		.teaser-large-column__media
-			width: $teaser-column-image-size
-			height: $teaser-column-image-size
+			width: $teaser-column-image-width-large
+			height: $teaser-column-image-height-large
 		.teaser-large-column__byline
 			min-height: initial
 		.teaser-large-column__text,
 		.teaser-large-column__title
-			padding-right: remify($teaser-column-image-size)
+			padding-right: remify($teaser-column-image-width-large + 20px)
