--- a/sass/web.site/modules/teaser/_teaser-small-column-minor.sass
+++ b/sass/web.site/modules/teaser/_teaser-small-column-minor.sass
@@ -29,6 +29,4 @@
 
 .teaser-small-column-minor--has-media
 	.teaser-small-column-minor__byline
-		padding-right: remify($teaser-column-mobile-image-size)
-		// min-height: $teaser-column-mobile-image-size - $page-padding - ownMarginBottom
-		min-height: 3.5rem
+		@extend %teaser-column__media-space
