--- a/sass/web.site/modules/teaser/_teaser-large-column-parquet.sass
+++ b/sass/web.site/modules/teaser/_teaser-large-column-parquet.sass
@@ -26,12 +26,9 @@
 	&__commentcount
 		@extend %teaser-commentcount
 
-
 .teaser-large-column-parquet--has-media
 	.teaser-large-column-parquet__byline
-		padding-right: remify($teaser-column-mobile-image-size)
-		// min-height: $teaser-column-mobile-image-size - $page-padding - ownMarginBottom = 5rem - 1.25rem - 0.25rem
-		min-height: 3.5rem
+		@extend %teaser-column__media-space
 
 +respond-min($break-tablet-min)
 	.teaser-large-column-parquet--has-media
