ZON-1822: fix spektrum

--- a/sass/web.site/modules/teaser/_teaser-small.sass
+++ b/sass/web.site/modules/teaser/_teaser-small.sass
@@ -17,6 +17,8 @@
 		@extend %teaser-kicker
 		&--blog
 			@extend %teaser-kicker--blog
+		&--spektrum
+			color: $spektrum_de_blue
 	&__title
 		@extend %teaser-title
 	&__text
