ZON-1822: add a little margin

--- a/sass/web.site/modules/centerpage/_centerpage.sass
+++ b/sass/web.site/modules/centerpage/_centerpage.sass
@@ -20,6 +20,8 @@
 	padding: 0 $cp-padding
 	float: left
 	width: 100%
+	&--news
+		margin-top: $vertical-space
 	&--parquet,
 	&--spektrum,
 	&--topic
