ZON-1829: Tweak CSS

--- a/sass/web.site/modules/teaser/_teaser-gallery.sass
+++ b/sass/web.site/modules/teaser/_teaser-gallery.sass
@@ -7,9 +7,11 @@ $break-gallery-teasers: $break-phablet-min
 
 .teaser-gallery-group
 	&__container
-		padding-bottom: remify(20px)
-		// flexbox for same height
-		+display-flex
+		padding-bottom: em(10px)
+		+respond-min($break-gallery-teasers)
+			padding-bottom: em(20px)
+			// flexbox for same height
+			+display-flex
 
 	&__button
 		background-color: $white
