--- a/sass/web.site/modules/centerpage/_header.sass
+++ b/sass/web.site/modules/centerpage/_header.sass
@@ -1,4 +1,4 @@
-.dynamic-cp-header
+.centerpage-header
 	background-color: $zon_lighter_grey
 	margin: remify(0 -20px 32px -20px) // neutralize $cp-paddings
 	padding: remify(40px 20px)
