--- a/src/zeit/web/site/templates/inc/comments/comment-form.html
+++ b/src/zeit/web/site/templates/inc/comments/comment-form.html
@@ -48,10 +48,14 @@
 		</div>
                 {% if request.registry.settings.sso_activate %}
                     {% if request.session.user.name == "Kein Benutzername" %}
-			<input class="comment-form__text" placeholder="Ihr neuer Benutzername" type="text" name="user_name">
+			<input class="comment-form__text" placeholder="Ihr neuer Benutzername" type="text" name="user_name" {% if view.error.user_name %}value="{{ view.error.user_name }}"{% endif %}>
+			{% if view.error.error == 'username_exists_or_invalid' %}
+			    <span class='error'>Benutzername enthält ungültige Zeichen oder ist bereits vergeben</span>
+			{% endif %}
                     {% endif %}
                 {% endif %}
-		<textarea class="comment-form__textarea js-required" name="comment" placeholder="{{ placeholder }}" maxlength="1500"></textarea>
+		<textarea class="comment-form__textarea js-required" name="comment" placeholder="{{ placeholder }}" maxlength="1500">
+{% if view.error and view.error.comment %}{{ view.error.comment }}{% endif %}</textarea>
 		<p class="comment-form__actions">
 			<input type="hidden" name="action" value="comment">
 			<input type="hidden" name="pid" value="{{ pid }}">
