ZON-1822: polishing for column teaser
- margin-bottom for heading
- grey background in parquet

--- a/sass/web.site/modules/teaser/_teaser-fullwidth-column.sass
+++ b/sass/web.site/modules/teaser/_teaser-fullwidth-column.sass
@@ -8,7 +8,8 @@
 	&__series-label
 		@extend .teaser-large__series-label
 	&__heading
-		@extend .teaser-large__heading
+		@extend %teaser-heading
+		margin-bottom: remify(4px)
 	&__combined-link
 		@extend .teaser-large__combined-link
 	&__kicker
