--- a/sass/web.site/modules/teaser/_teaser-fullwidth.sass
+++ b/sass/web.site/modules/teaser/_teaser-fullwidth.sass
@@ -54,6 +54,7 @@
 			width: em(640px)
 	&__heading
 		@extend %teaser-heading
+		margin-bottom: remify(4px)
 
 	&__series-label
 		@extend %teaser-series-label
