--- a/sass/web.site/modules/teaser/_teaser-small-column-parquet.sass
+++ b/sass/web.site/modules/teaser/_teaser-small-column-parquet.sass
@@ -1,6 +1,5 @@
 .teaser-small-column-parquet
 	@extend %teaser-column
-	@extend %teaser-column--in-parquet
 	&__media
 		@extend %teaser-column__media
 	&__media-item
@@ -38,7 +37,8 @@
 	.teaser-small-column-parquet
 		margin: $vertical-space 0 $vertical-space 0
 		&--has-media
-			padding: 0 $petite $petite remify(180px+20px)
+			background: none
+			padding: 0 0 $petite remify(180px+20px)
 			+respond-min($break-desktop-min)
 				padding-left: remify(250px+20px)
 		&__mediawrapper
