ZON-1947: pixelate content area
First strike. A javascript ruleset, that can count clicks on links in the main area, using RAM positioning.

--- a/src/zeit/web/core/templates/inc/tracking/webtrekk.html
+++ b/src/zeit/web/core/templates/inc/tracking/webtrekk.html
@@ -26,7 +26,7 @@
     var webtrekk = {
         linkTrack : "standard",
         heatmap : "0",
-        linkTrackAttribute: "id"
+        linkTrackAttribute: "data-wt-click"
     };
 
     if ( typeof webtrekkV3 === "function" ) {
