ZON-1836: Show release date in breaking news banner

--- a/src/zeit/web/site/templates/breaking_news_article.html
+++ b/src/zeit/web/site/templates/breaking_news_article.html
@@ -2,7 +2,7 @@
 
 {% block breaking_news %}
 	<div class="breaking-news-banner">
-		<strong class="breaking-news-banner__label">Eilmeldung</strong> <span class="breaking-news-banner__time">{{- view.date_last_published_semantic | format_date('time_only') -}}</span>
+		<strong class="breaking-news-banner__label">Eilmeldung</strong> <span class="breaking-news-banner__time">{{ view.date_first_released | format_date('time_only') }}</span>
 	</div>
 {% endblock breaking_news %}
 
