ZON-1912: display adtile_8 after adtile_7
... instead of displaying adtile_7 two times. This is the first hotfix version for deployment to Beta.

--- a/src/zeit/web/site/templates/centerpage.html
+++ b/src/zeit/web/site/templates/centerpage.html
@@ -24,6 +24,7 @@
 
 {% block main %}
     {% for region in view.regions %}
+        {% set region_loop = loop %}
         {%- include ["zeit.web.site:templates/inc/region/{}.html".format(region.kind),
                      "zeit.web.site:templates/inc/region/default.html"] ignore missing -%}
     {% endfor %}
